--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -18,9 +18,10 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
-  app:
+  rails:
     build:
       context: .
+      dockerfile: Dockerfile.dev
     volumes:
       - .:/app
     ports:
@@ -28,8 +29,6 @@ services:
     depends_on:
       - db
     environment:
-      RAILS_ENV: development
-      BUNDLE_WITHOUT: "production"
       DB_USER: $DB_USER
       DB_NAME: $DB_NAME
       DB_PASSWORD: $DB_PASSWORD
